# Cpp-Todoist-Lib

./: .gitignore  CMakeLists.txt  README.md
include/: TodoistApi.hpp
src/: Project.cpp  Project.hpp  Task.cpp  Task.hpp  TodoistApi.cpp
